src/test/deca/context/valid/while.deca
// Description : 
//	 test de while
//
// Resultats :
//	
// 
//
// Historique:
//    cree le 08/01/2022
{
    int i = 0;

    while(!(i>10)){
        i = i + 1;
    }

    while(false){
        while(true){}
    }
}